<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/defalut_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <com.materialedittext.MaterialEditText
                android:id="@+id/activity_new_dream_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="34sp"
                app:baseColor="@android:color/black"
                app:floatingLabel="highlight"
                app:primaryColor="?colorAccent" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_attach_money_black_24dp" />

                <com.materialedittext.MaterialEditText
                    android:id="@+id/activity_new_dream_budget_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_weight="1"
                    android:hint="@string/hint_budget"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/black_54"
                    app:floatingLabel="highlight"
                    app:primaryColor="?colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/height_48"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:id="@+id/activity_new_dream_set_time"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_weight="1"
                    android:background="@drawable/default_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_time"
                    android:textColor="@color/black_54"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <com.materialedittext.MaterialEditText
                android:id="@+id/activity_new_dream_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="@dimen/margin_8"
                android:hint="@string/hint_description"
                android:imeOptions="actionDone"
                app:floatingLabel="highlight"
                app:primaryColor="?colorAccent" />

            <com.gao.dreamaccount.views.SAutoBgButton
                android:id="@+id/activity_new_dream_complete_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/height_48"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/color_light_red"
                android:text="@string/btn_done"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>